// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputWithLabel/> renders the component input with error 1`] = `
<span
  className="container error"
>
  <input
    className="input error"
    onChange={[Function]}
    type="text"
  />
  <span
    className="tag right"
  >
    example.com
  </span>
</span>
`;

exports[`<InputWithLabel/> renders the label along with its input 1`] = `
<span
  className="container left"
>
  <input
    className="input"
    onChange={[Function]}
    placeholder="Type some text"
    type="text"
  />
  <span
    className="tag left"
  >
    example.com
  </span>
</span>
`;
